[FIX-8] Fix overflow error

--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,16 @@ h2 {
   font-weight: 600;
   line-height: 120%;
 }
+html {
+  overflow-x: hidden;
+}
 
 body {
   background: linear-gradient(180deg, #142850 10.39%, #0c7b93 134.5%);
   min-height: 100vh;
   color: #fff;
   overflow-x: hidden;
+  position: relative;
 }
 
 main {
